--- a/templates/medicamento/medicamento_detail.html
+++ b/templates/medicamento/medicamento_detail.html
@@ -38,6 +38,10 @@ Puede ver detalles del medicamento seleccionado
                             <td>{{medicamento.precio}}</td>
                         </tr>
                         <tr>
+                            <th>Existencia</th>
+                            <td>{{medicamento.existencia}}</td>
+                        </tr>
+                        <tr>
                             <th>Presentacion</th>
                             <td>{{medicamento.id_presentacion}}</td>
                         </tr>
