--- a/templates/Farmacia/farmacia.html
+++ b/templates/Farmacia/farmacia.html
@@ -10,7 +10,7 @@
 {% endblock title %}
 
 {% block page_name %}
-Pagina Principal
+Farmacia Bio-Génesis
 {% endblock page_name %}
 
 {% block breadcrumbs %}
@@ -27,11 +27,10 @@ Pagina Principal
             
 			  <div class="col-lg-6 col-xs-6">
 				<!-- small box -->
-				<div class="small-box bg-aqua">
+				<div class="small-box bg-blue">
 				  <div class="inner">
-					<h3>{{ compras }}</h3>
-	  
-					<p>Compras Realizadas</p>
+
+					<p>INVENTARIO</p>
 				  </div>
 				  <div class="icon">
 					<i class="fa fa-cart-plus"></i>
@@ -45,10 +44,9 @@ Pagina Principal
 			  <div class="col-lg-6 col-xs-6">
 				<!-- small box -->
 				<div class="small-box bg-yellow">
-				  <div class="inner">
-					<h3>{{ ventas }}</h3>
+				  <div class="inner">	
 	  
-					<p>Ventas Realizadas por usuario</p>
+					<p>VENTAS</p>
 				  </div>
 				  <div class="icon">
 					<i class="fa fa-usd"></i>
@@ -63,9 +61,8 @@ Pagina Principal
 				<!-- small box -->
 				<div class="small-box bg-green">
 				  <div class="inner">
-					<h3>{{ medicamentos }}</h3>
-	  
-					<p>Diferentes Medicamentos</p>
+					
+					<p>GESTION DE MEDICAMENTOS</p>
 				  </div>
 				  <div class="icon">
 					<i class="fa fa-medkit"></i>
@@ -80,9 +77,8 @@ Pagina Principal
 				<!-- small box -->
 				<div class="small-box bg-red">
 				  <div class="inner">
-					<h3>{{ empleados }}</h3>
 	  
-					<p>Empleados en la Empresa</p>
+					<p>GESTION DE USUARIOS</p>
 				  </div>
 				  <div class="icon">
 					<i class="fa fa-black-tie"></i>
