--- a/templates/base/_header.html
+++ b/templates/base/_header.html
@@ -4,9 +4,9 @@
     {% block logo %}
     <a href="{% block logo_href %}/{% endblock %}" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
-        <span class="logo-mini">{% block logo_text_small %}<b>T</b>OO{% endblock %}</span>
+        <span class="logo-mini">{% block logo_text_small %}<b>BIO-</b>GENESIS{% endblock %}</span>
         <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg">{% block logo_text %}<b>Farmacia</b> HDP115{% endblock %}</span>
+        <span class="logo-lg">{% block logo_text %}<b>Bio-</b>Genesis{% endblock %}</span>
     </a>
     {% endblock %}
 
