--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 {% block content %}
 	<div class="container-fluid">
 		<div class="row">
-			<h1><b>Bienvenidos Farmacia HDP115</b></h1> <br><br>
+			<h1><b>Bienvenidos a Farmacia Bio-Genesis</b></h1> <br><br>
 			{% if not request.user.is_authenticated %}
 			<div class="col-md-offset-2 col-md-4">
 				<p>Primero debes iniciar sesion:</p>
