--- a/templates/usuarios/login.html
+++ b/templates/usuarios/login.html
@@ -7,7 +7,7 @@
 {% block content %}
 	<form action='' method="post">
 		{% csrf_token %}
-		<h3 class="text-center">Iniciar Sesion</h3>
+		<h3 class="text-center">Iniciar Sesión</h3>
 		<div class="form-group">			
 			<label class="col-md-offset-4 col-md-2">{{form.username.label}}: </label>
 			{{form.username}}<br>
@@ -17,7 +17,7 @@
 			{{form.password}}<br>
 		</div>
 		<div class="col-md-offset-4 col-md-2">
-			<input type="submit" value="Iniciar Sesion">			
+			<input type="submit" value="Iniciar Sesión">			
 		</div>
 	</form>
 	<br><br><br>
