--- a/templates/Farmacia/user_list.html
+++ b/templates/Farmacia/user_list.html
@@ -21,7 +21,7 @@
 {% block content %}
 	<div class="container-fluid">
 		<div class="row">
-			<h1>Bienvenidos a la pagina Gestionion de Bodegueros</h1>
+			<h1>Bienvenidos a la pagina Gestion de Bodegueros</h1>
 			<div class="col-md-offset-2">
 				<p>Algunos enlaces utiles:</p>
 					<!--Aqui empieza la iteracion for-->
