--- a/templates/Inventario/Inventario_list.html
+++ b/templates/Inventario/Inventario_list.html
@@ -1,40 +1,38 @@
 {% extends "base/base.html" %}
 
 {% block title %}
-Medicamentos
+Inventario
 {% endblock title %}
 
 {% block page_name %}
-Lista de Medicamentos
+Inventario de Medicamentos
 {% endblock page_name  %} 
 
 {% block page_description %}
-Puede gestionar los medicamentos registrados aqui
+Puede editar las existencias de los Medicamentos
 {% endblock page_description %}
 
 {% block breadcrumbs %}
     <ul class="breadcrumb">
         <li><a href="{% url 'farmacia_index' %}">Inicio</a></li>
         <li><a>Farmacia</a></li>
-        <li class="active"><a>Medicamentos</a></li>
+        <li class="active"><a>Inventario</a></li>
     </ul>
 {% endblock breadcrumbs %}
 
 {% block content %}
 <div class="container-fluid">
     <div class="row">
-        <a href="{% url 'medicamento_create' %}" class="btn btn-info pull-right">Crear Nuevo Medicamento</a><br><br>
+        
         <div class="table-responsive">
         {% if medicamentos %}
             <table class="table table-hover table-bordered">
                 <thead>
                     <tr>
                         <th class="col">Nombre</th>
-                        <th class="col">presentacion</th>
                         <th class="col">Tipo</th>
-                        <th class="col">Precio Unitario ($)</th>
+                        <th class="col">Existencias</th>
                         
-                      
                         <th class="col">Acciones</th>
                     </tr>
                 </thead>
@@ -42,13 +40,14 @@ Puede gestionar los medicamentos registrados aqui
                 {% for medicamento in medicamentos %}
                     <tr>
                         <td>{{medicamento.nombre}}</td>
-                        <td>{{medicamento.id_presentacion}}</td>
                         <td>{{medicamento.id_tipo}}</td>
-                        <td>{{medicamento.precio|floatformat:"2"}}</td>
-                                            
+                        <td>{{medicamento.existencia}}</td>
+                                                
                         <td>
-                            <a class="btn btn-primary" href="{% url 'medicamento_update' medicamento.id_medicamento %}" role="button">Editar</a> &nbsp&nbsp 
-                            <a class="btn btn-danger" href="{% url 'medicamento_delete' medicamento.id_medicamento %}" role="button">Eliminar</a>
+                            
+                            <a class="btn btn-success" href="{% url 'Inventario_detail' medicamento.id_medicamento %}" role="button">Mas Detalles</a> &nbsp&nbsp
+                            <a class="btn btn-primary" href="{% url 'Inventario_update' medicamento.id_medicamento %}" role="button">Editar</a> &nbsp&nbsp 
+                            <a class="btn btn-danger" href="{% url 'Inventario_delete' medicamento.id_medicamento %}" role="button">Eliminar</a>
                         </td>
                     </tr>
                 {% endfor %}
