--- a/templates/medicamento/medicamento_new.html
+++ b/templates/medicamento/medicamento_new.html
@@ -34,10 +34,17 @@ Cree un nuevo Medicamento
 
                 {{form.nombre.errors}}
                 <label for="">{{ form.nombre.label }}</label>
-                {{form.nombre}}         
+                {{form.nombre}}   
+                      
                 {{form.precio.errors}}
                 <label for="">{{ form.precio.label }}</label>
                 {{form.precio}}
+
+                {{form.existencia.errors}}
+                <label for="">{{ form.existencia.label }}</label>
+                {{form.existencia}}
+                
+
                 {{form.id_presentacion.errors}}
                 <label for="">{{ form.id_presentacion.label }}</label>
                 {{form.id_presentacion}}
