--- a/templates/Farmacia/farmacia.html
+++ b/templates/Farmacia/farmacia.html
@@ -27,22 +27,22 @@ Farmacia Bio-Génesis
             
 			  <div class="col-lg-6 col-xs-6">
 				<!-- small box -->
+				<a href="{% url 'Inventario_list' %}">
 				<div class="small-box bg-blue">
 				  <div class="inner">
-
 					<p>INVENTARIO</p>
 				  </div>
 				  <div class="icon">
 					<i class="fa fa-cart-plus"></i>
 				  </div>
 				</div>
+				</a>
 			  </div>
 			 
 			  
-
-
 			  <div class="col-lg-6 col-xs-6">
 				<!-- small box -->
+				<a href="{% url 'venta' %}">
 				<div class="small-box bg-yellow">
 				  <div class="inner">	
 	  
@@ -52,6 +52,7 @@ Farmacia Bio-Génesis
 					<i class="fa fa-usd"></i>
 				  </div>
 				</div>
+				</a>
 			  </div>
 
 
@@ -59,15 +60,16 @@ Farmacia Bio-Génesis
 
 			  <div class="col-lg-6 col-xs-6">
 				<!-- small box -->
+				<a href="{% url 'medicamento_list' %}">
 				<div class="small-box bg-green">
-				  <div class="inner">
-					
+				  <div class="inner">	
 					<p>GESTION DE MEDICAMENTOS</p>
 				  </div>
 				  <div class="icon">
 					<i class="fa fa-medkit"></i>
 				  </div>
 				</div>
+				</a>
 			  </div>
 
 
@@ -75,15 +77,16 @@ Farmacia Bio-Génesis
 
 			  <div class="col-lg-6 col-xs-6">
 				<!-- small box -->
+				<a href="{% url 'user_list' %}">
 				<div class="small-box bg-red">
 				  <div class="inner">
-	  
 					<p>GESTION DE USUARIOS</p>
 				  </div>
 				  <div class="icon">
 					<i class="fa fa-black-tie"></i>
 				  </div>
 				</div>
+				</a>
 			  </div>
 
 		</div>
