--- a/templates/medicamento/medicamento_list.html
+++ b/templates/medicamento/medicamento_list.html
@@ -9,7 +9,7 @@ Lista de Medicamentos
 {% endblock page_name  %} 
 
 {% block page_description %}
-Puede gestionar los medicamentos registrados aquí
+Puede gestionar los medicamentos registrados aqui
 {% endblock page_description %}
 
 {% block breadcrumbs %}
@@ -30,7 +30,7 @@ Puede gestionar los medicamentos registrados aquí
                 <thead>
                     <tr>
                         <th class="col">Nombre</th>
-                        <th class="col">Presentación</th>
+                        <th class="col">presentacion</th>
                         <th class="col">Tipo</th>
                         <th class="col">Precio Unitario ($)</th>
                         
